--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h2>Guilty Gear Xrd Revelator Rev 2[NPUB31806]-[Gutamps Official]</h2>
     <style> body { color: blueviolet };
     </style>
-<p>Part 1 : <a href="" target="_blank" rel="noopener">Get Link</a></p>
-<p>Part 2 : <a href="" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 1 : <a href="https://www.mediafire.com/file/btvhzn6ty99r1g9/Guilty_Gear_Xrd_Revelator_%255BNPUB31806%255D-%255BGO%255D_Part1.pkg/file" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 2 : <a href="https://www.mediafire.com/file/syogj5t3ir26o1i/Guilty_Gear_Xrd_Revelator_%255BNPUB31806%255D-%255BGO%255D_Part2.pkg/file" target="_blank" rel="noopener">Get Link</a></p>
 <p>Part 3 : <a href="" target="_blank" rel="noopener">Get Link</a></p>
 </body>
 </html>
