--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
 <p>Part 1 : <a href="https://www.mediafire.com/file/btvhzn6ty99r1g9/Guilty_Gear_Xrd_Revelator_%255BNPUB31806%255D-%255BGO%255D_Part1.pkg/file" target="_blank" rel="noopener">Get Link</a></p>
 <p>Part 2 : <a href="https://www.mediafire.com/file/syogj5t3ir26o1i/Guilty_Gear_Xrd_Revelator_%255BNPUB31806%255D-%255BGO%255D_Part2.pkg/file" target="_blank" rel="noopener">Get Link</a></p>
-<p>Part 3 : <a href="" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 3 : <a href="https://www.mediafire.com/file/8iliyhpjg01t93g/Guilty_Gear_Xrd_Revelator_%255BNPUB31806%255D-%255BGO%255D_Part3.pkg/file" target="_blank" rel="noopener">Get Link</a></p>
 </body>
 </html>
